--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Handjet:wght@500&display=swap');
+
+:root {
+  --background1: #264653ff;
+  --background2: #2a9d8fff;
+  --background3: #e9c46aff;
+  --secondary1: #f4a261ff;
+  --secondary2: #e76f51ff;
+  --highlight: #219ebc;
+}
+
 * {
-    font-family: sans-serif;
+    font-family: handjet;
     margin: 0;
     padding: 0;
     font-size: 1.1rem;
@@ -19,7 +30,7 @@ header {
     width: 100%;
     display: flex;
     flex-direction: row;
-    background-color: white;
+    background-color: var(--background1);
     font-weight: 300;
     padding: 15px;
     justify-content: center;
@@ -50,12 +61,12 @@ header li {
 
 header li :hover {
     text-decoration: underline;
-    color: #64829b;
+    color: var(--highlight);
 }
 
 .content {
-    padding: 74px 50px;
-    background-color: #f7f7f7;
+    padding: 30% 50px;
+    background-color: var(--background2);
     display: flex;
     gap: 35px;
     flex-wrap: wrap;
@@ -64,7 +75,7 @@ header li :hover {
 
 .card {
     width: 28%;
-    background-color: white;
+    background-color: var(--background3);
     color: #1e2d2fe8;
     border-radius: 5px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -88,9 +99,12 @@ button {
 }
 
 footer {
-    background-color: gray;
-    color: white;
-    
+    background-color: var(--background1);
+    color: var(--secondary2);
+    position:fixed;
+    left: 0;
+    bottom: 0;
+    width:100%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     text-align: center;
@@ -98,7 +112,7 @@ footer {
 }
 
 footer a {
-    color: white;
+    color: var(--secondary2);
 }
 
 footer div {
@@ -147,4 +161,8 @@ footer div {
     .business_information {
         grid-row: 3;
     }
+}
+
+body {
+  color: var(--secondary2)
 }
