--- a/styles/test.css
+++ b/styles/test.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Handjet:wght@500&display=swap');
+
 img {
   width: 300px;
   margin: 0 auto;
@@ -11,4 +13,11 @@ body {
 
 h1, p {
   text-align: center;
+}
+
+* {
+    font-family: handjet;
+    margin: 0;
+    padding: 0;
+    font-size: 1.1rem;
 }
