--- a/styles/style.css
+++ b/styles/style.css
@@ -34,6 +34,7 @@ header {
     font-weight: 300;
     padding: 15px;
     justify-content: center;
+    z-index: 1000;
 }
 
 header h1 {
@@ -65,7 +66,7 @@ header li :hover {
 }
 
 .content {
-    padding: 30% 50px;
+    padding: 10% 50px;
     background-color: var(--background2);
     display: flex;
     gap: 35px;
@@ -168,5 +169,6 @@ footer div {
 }
 
 body {
-  color: var(--secondary2)
+  color: var(--secondary2);
+  background-color: var(--background2);
 }
